--- a/frontend/meal-pal/src/components/App.css
+++ b/frontend/meal-pal/src/components/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap');
+
 .App {
   text-align: center;
 }
@@ -13,13 +16,18 @@
   }
 }
 
+.adjust-line-height {
+  line-height: 1em;
+}
+
 .App-header {
-  background-color: #ffffff;
+  background-color: #add8e6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: 'Kreon';
   font-size: calc(10px + 2vmin);
   color: black;
 }
@@ -28,15 +36,36 @@
   color: #61dafb;
 }
 .button {
-  background-color: #0E2F54;
+  background-color: #0e2f54;
   padding: 10px;
   width: 178px;
   height: 85px;
+  align-items: center;
+  text-align: center;
+  border: white;
 }
 .button-font {
-  font-family: 'Arial';
+  font-family: 'Roboto Condensed';
   font-size: 18px;
   color: #FFF;
+  align-items: center;
+  text-align: center;
+  
+}
+.title{
+  font-family: 'Kreon';
+  font-size: 18px;
+  color: #62C6F2;
+  align-items: center;
+  text-align: center;
+}
+
+.otherWords{
+  font-family: 'Inter';
+  font-size: 30px;
+  color: rgb(0, 0, 0);
+  align-items: center;
+  text-align: center;
 }
 @keyframes App-logo-spin {
   from {
